# AI-based-Credit-Scoring-Agent-for-MSMEs

./: package-lock.json  readme.md
backend/ml engine/: business_dataset_1000.csv  main.py  pyproject.toml
frontend/: .env  package-lock.json  package.json
frontend/src/: App.jsx
frontend/src/explain/: EnhancedFinancialForm.jsx  Explain.jsx  FormInputField.jsx  HeroSection.jsx  ResultCard.jsx  fields.js  utils.js
frontend/src/home/: Home.jsx
ml engine/: bank_statement_data.py  main.py  model.py  multiple_people_dataset.py  pyproject.toml  score_assesment.py
