[project]
name = "ml-engine"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "faker>=37.4.2",
    "fastapi>=0.116.1",
    "kagglehub>=0.3.12",
    "matplotlib>=3.10.3",
    "numpy>=2.3.2",
    "pandas>=2.3.1",
    "requests>=2.32.4",
    "scikit-learn",
    "seaborn>=0.13.2",
    "uvicorn>=0.35.0",
]
